tests/snapshots/trace_solver__spanshot_request@5195445494686040480.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  bundle_name: stateless
  request: "[&ref mut x]: &mut [T]"
---
[&ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
&ref mut x @ &mut (*p).0: &mut T
// Applying rule `DerefMutWithShared(EatOuter)`
&ref mut x @ (&mut (*p).0 as &_): &T
// Applying rule `Deref(EatOuter)`
ref mut x @ *(&mut (*p).0 as &_): T
// Applying rule `BindingBorrow`
x @ &mut *(&mut (*p).0 as &_): &mut T
// Applying rule `Binding`
let x: &mut T = &mut *(&mut (*p).0 as &_)

// Final bindings (simplified):
let x: &mut T = &mut *(&mut (*p).0 as &_) // Borrow-check error: MutBorrowBehindSharedBorrow
